src/test/ui/associated-types/cache/project-fn-ret-invariant.oneuse.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/project-fn-ret-invariant.rs:47:12
   |
LL |    let f = foo; // <-- No consistent type can be inferred for `f` here.
   |            ^^^

error: unsatisfied lifetime constraints
  --> $DIR/project-fn-ret-invariant.rs:48:12
   |
LL | fn baz<'a,'b>(x: Type<'a>, y: Type<'b>) -> (Type<'a>, Type<'b>) {
   |        -- -- lifetime `'b` defined here
   |        |
   |        lifetime `'a` defined here
LL |    let f = foo; // <-- No consistent type can be inferred for `f` here.
LL |    let a = bar(f, x);
   |            ^^^^^^^^^ argument requires that `'a` must outlive `'b`

error: unsatisfied lifetime constraints
  --> $DIR/project-fn-ret-invariant.rs:49:12
   |
LL | fn baz<'a,'b>(x: Type<'a>, y: Type<'b>) -> (Type<'a>, Type<'b>) {
   |        -- -- lifetime `'b` defined here
   |        |
   |        lifetime `'a` defined here
...
LL |    let b = bar(f, y); //[oneuse]~ ERROR 49:19: 49:20: lifetime mismatch [E0623]
   |            ^^^^^^^^^ argument requires that `'b` must outlive `'a`

error: aborting due to 2 previous errors

